[package]
name = "this_will_be_resonite_graphics_in_2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "glow",         
    "persistence",  
] }
humansize = "2.1.3"
serde = "1.0.203"
log = "0.4.21"
reqwest = "0.12.4"
hardware-id = "0.3.0"
uuid = {version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
tokio = "1.38.0"
serde_json = "1.0.117"
sha256 = "1.5.0"
signalrs-client = { path = "./external/signalrs/lib/signalrs-client/" }
anyhow = "1.0.86"
signalrs-derive = "0.1.0"
lazy_static = "1.4.0"
directories = "5.0.1"
image = "0.25.1"
keyring = "2.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
serde_repr = "0.1.19"
